sfdx-source/force-app/main/default/objects/AccountContactRelation/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>LEM-16014: It is used to display "Account Name" as hyperlink on "Related Accounts" component on Task record page.</description>
    <formula>HYPERLINK(&apos;/&apos; + AccountId, Account.Name, &apos;_blank&apos;)</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>