sfdx-source/force-app/main/default/objects/AccountContactRelation/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>LEM-1158: It indicates email of the related Contact.</description>
    <formula>Contact.Email</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>