sfdx-source/force-app/main/default/objects/AccountContactRelation/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>LEM-1158: It indicates name of the related Contact.</description>
    <formula>Contact.Contact_Name__c</formula>
    <label>Name</label>
    <type>Text</type>
</CustomField>