sfdx-source/force-app/main/default/objects/AccountContactRelation/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <description>LEM-16014: It is used to display phone number of Contact on "Related Accounts" component on Task record page.</description>
    <formula>Contact.Phone</formula>
    <label>Contact Phone</label>
    <type>Text</type>
</CustomField>