sfdx-source/force-app/main/default/objects/AccountContactRelation/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <caseSensitive>true</caseSensitive>
    <description>LEM-1368: This field is used for data migration from Figment to Lemonade.</description>
    <externalId>true</externalId>
    <label>Legacy ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>