sfdx-source/force-app/main/default/objects/AccountContactRelation/fields/Mastered_In_Figment__c.field-meta.xml
<CustomField>
    <fullName>Mastered_In_Figment__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-5346: This field indicates whether the ACR has to be mastered in figment or not
    depending on the segment type of the associated account and segment type of the contact’s parent
    account.</description>
    <formula>AND(
        OR(
          TEXT(Contact.Account.Segment__c) = $Label.AccountSegmentSMB,
          TEXT(Account.Segment__c) = $Label.AccountSegmentSMB
        ),
        OR(
          TEXT(Contact.Account.Primary_Vertical__c) &lt;&gt; $Label.PrimaryVerticalRx,
          TEXT(Account.Primary_Vertical__c) &lt;&gt; $Label.PrimaryVerticalRx
        )
      )</formula>
    <label>Mastered In Figment</label>
    <type>Checkbox</type>
</CustomField>